responsive profile page

--- a/public/stylesheets/dashboard.scss
+++ b/public/stylesheets/dashboard.scss
@@ -9,7 +9,7 @@
 }
 
 .dashboard-wrapper {
-  margin-top: 44px;
+  margin-top: $navbar-height;
   display: flex;
   flex-direction: column;
   align-items: center;
