--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -6,6 +6,7 @@ $screen-middle: "(min-width : 480px)";
 $screen-large: "(min-width : 1024px)";
 $btn-text-a: #aaaaaa;
 $btn-text-b: #ffffff;
+$navbar-height: 44px;
 
 @import "./navigation";
 @import "./profile";
