--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -1,7 +1,7 @@
 {{> navbar user}}
 <script>const user = {{{ userString }}}</script>
 <script src='/javascripts/data.js'></script>
-<script src='/javascripts/profile.js'></script>
+<script src='/javascripts/user-info.js'></script>
 
 <h3>Edit Profile</h3>
 <div class="form-group">
