--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -2,7 +2,7 @@
 <script src='/javascripts/user-info.js'></script>
 
 <h2>Signup</h2>
-<div class="form-group">
+<div class="content-wrapper">
   <form action="/signup" method="POST" id="form-container" encType="multipart/form-data">
     <div class="form-group">
 
