--- a/views/events/edit.hbs
+++ b/views/events/edit.hbs
@@ -4,46 +4,47 @@
 <script src='/javascripts/event.js'></script>
 
 <h3>Edit event</h3>
-<form method="POST" action="/events/edit/{{event._id}}" encType="multipart/form-data">
-
-    <h3>Basic Info</h3>
-    <div class="form-group">
-        <label for="title">Event title</label>
-        <input type="text" id="title" name="title" placeholder="Title" value="{{ event.title}}">
-        <label for="description">Event description</label>
-        <textarea rows="4" type="text" id="description" name="description" placeholder="My event is about.." value="{{ event.description}}"></textarea>
-        <label for="date">Event date</label>
-        <input type="date" id="date" name="date" placeholder="Date" value="{{ event.date}}">
-        <label for="language">Event language</label>
-        <div class="ui dropdown">
-            <input type="hidden" name="language">
-            <div class="default text">Language</div>
-            <div class="menu" id="event-language">
+<div class="content-wrapper">
+    <form method="POST" action="/events/edit/{{event._id}}" encType="multipart/form-data">
+        <h3>Basic Info</h3>
+        <div class="form-group">
+            <label for="title">Event title</label>
+            <input type="text" id="title" name="title" placeholder="Title" value="{{ event.title}}">
+            <label for="description">Event description</label>
+            <textarea rows="4" type="text" id="description" name="description" placeholder="My event is about.." value="{{ event.description}}"></textarea>
+            <label for="date">Event date</label>
+            <input type="date" id="date" name="date" placeholder="Date" value="{{ event.date}}">
+            <label for="language">Event language</label>
+            <div class="ui dropdown">
+                <input type="hidden" name="language">
+                <div class="default text">Language</div>
+                <div class="menu" id="event-language">
+                </div>
             </div>
         </div>
-    </div>
-    </br>
-    <h3>Event Picture</h3>
-    <div class="form-group">
-        <label for="picture">Upload a Picture for your event</label>
-        <input type="file" name="picture">
-    </div>
-    </br>
-    <h3>Address</h3>
-    <div class="form-group">
-        <label for="country">Country</label>
-        <div class="ui dropdown">
-            <input type="hidden" name="country">
-            <div class="default text">Country</div>
-            <div class="menu" id="user-country">
-            </div>
+        </br>
+        <h3>Event Picture</h3>
+        <div class="form-group">
+            <label for="picture">Upload a Picture for your event</label>
+            <input type="file" name="picture">
         </div>
-        <label for="city">City</label>
-        <input type="text" id="city" name="city" placeholder="City" value="{{ event.location.city}}">
-        <label for=" street ">Street</label>
-        <input type="text" id="street" name="street" placeholder="Street" value="{{ event.location.street}}">
-    </div>
-    </br>
-    <input type="submit" name=" " id="submit" class="success-btn">
-    </br>
-</form>
+        </br>
+        <h3>Address</h3>
+        <div class="form-group">
+            <label for="country">Country</label>
+            <div class="ui dropdown">
+                <input type="hidden" name="country">
+                <div class="default text">Country</div>
+                <div class="menu" id="user-country">
+                </div>
+            </div>
+            <label for="city">City</label>
+            <input type="text" id="city" name="city" placeholder="City" value="{{ event.location.city}}">
+            <label for=" street ">Street</label>
+            <input type="text" id="street" name="street" placeholder="Street" value="{{ event.location.street}}">
+        </div>
+        </br>
+        <input type="submit" name=" " id="submit" class="success-btn">
+        </br>
+    </form>
+</div>
