--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,23 +1,27 @@
 <h2>Login</h2>
 
-<form action="/login" method="POST" id="form-container">
-  <label for="email">Email</label>
-  <input id="email" type="text" name="email" placeholder="jon@snow.com">
+<div class="content-wrapper">
+  <form action="/login" method="POST" id="form-container">
 
-  <br><br>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input id="email" type="text" name="email" placeholder="jon@snow.com">
+      <label for="password">Password</label>
+      <input id="password" type="password" name="password" placeholder="Your password">
+    </div>
 
-  <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password">
-  <br> {{#if message }}
-  <div class="error-message">{{ message }}</div>
-  {{/if}}
+    </br> {{#if message }}
+    <div class="error-message">{{ message }}</div>
+    {{/if}}
+    </br>
 
-  <br><br>
-
-  <button>Login</button>
-
-  <p class="account-message">
-    Don't have an account yet?
-    <a href="/signup">Signup</a>
-  </p>
-</form>
+    <div class="form-group">
+      <button class="success-btn">Log in</button>
+      </br>
+      <p class="account-message">
+        Don't have an account yet?
+        <a href="/signup">Sign up</a>
+      </p>
+    </div>
+  </form>
+</div>
