--- a/views/events/new.hbs
+++ b/views/events/new.hbs
@@ -1,5 +1,5 @@
-{{> navbar user}}
-<script>const user = {{{ userString }}}</script>
+{{> navbar data}}
+<script>const data = {{{ dataString }}}</script>
 <script src='/javascripts/data.js'></script>
 <script src='/javascripts/event.js'></script>
 
@@ -9,18 +9,14 @@
         <h3>Basic Info</h3>
         <div class="form-group">
             <label for="title">Event title</label>
-            <input type="text" id="title" name="title" placeholder="Title">
-            <label for="description">Event description</label>
+            <input type="text" id="title" name="title" placeholder="Title" required>
+            <label for="description" required>Event description</label>
             <textarea rows="4" type="text" id="description" name="description" placeholder="My event is about.."></textarea>
-            <label for="date">Event date</label>
+            <label for="date" required>Event date</label>
             <input type="date" id="date" name="date" placeholder="Date">
-            <label for="language">Event language</label>
-            <div class="ui dropdown">
-                <input type="hidden" name="language">
-                <div class="text"></div>
-                <div class="menu" id="event-language">
-                </div>
-            </div>
+            <label for="language" required>Event language</label>
+            <select class="ui search selection dropdown" name="language" id="event-language">
+            </select>
         </div>
         </br>
         <h3>Event Picture</h3>
@@ -32,12 +28,9 @@
         <h3>Address</h3>
         <div class="form-group">
             <label for="country">Country</label>
-            <div class="ui dropdown">
-                <input type="hidden" name="country">
-                <div class="default text">Country</div>
-                <div class="menu" id="user-country">
-                </div>
-            </div>
+            <select class="ui search selection dropdown" name="country" id="user-country">
+                <option value="">Country</option>
+            </select>
             <label for="city">City</label>
             <input type="text" id="city" name="city" placeholder="City">
             <label for="street">Street</label>
