rudimentary layout find events page

--- a/views/events/find.hbs
+++ b/views/events/find.hbs
@@ -1,18 +1,15 @@
 {{> navbar user}}
 <h3>Find Events</h3>
 
+
 <a href="/events/new">Create own event</a>
-<div class="filter-container">
-    Filter options
-</div>
-<div class="results-container">
-    <ul>
-        {{#each events}}
-        <div class="tile">
-            <a href="/events/{{ this._id}}">
-                {{ this.title}}<span> - {{ this.description }}</span>
-            </a>
-        </div>
-        {{/each }}
-    </ul>
+<div class="vert-container">
+    <div class="filter-container">
+        Filter options
+    </div>
+    <div class="results-container">
+        <ul>
+            {{#each events}} {{> event_tile this}} {{/each }}
+        </ul>
+    </div>
 </div>
