--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -11,6 +11,7 @@ $navbar-height: 44px;
 @import "./navigation";
 @import "./profile";
 @import "./dashboard";
+@import "./search";
 
 * {
   margin: 0;
@@ -56,6 +57,12 @@ form {
   flex-direction: column;
   align-items: center;
   margin: 0 0 20px 0;
+}
+
+.vert-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
 .success-btn {
