--- a/public/stylesheets/search.scss
+++ b/public/stylesheets/search.scss
@@ -19,4 +19,20 @@ $filter-width: 320px;
   height: 120px;
   padding: 0 4px;
   margin: 2px 0;
+  display: flex;
+  align-items: center;
+  .tile-image {
+    height: 120px;
+    width: 120px;
+    border: 1px solid #e6e6e6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+      height: 100%;
+    }
+  }
+  .tile-content {
+    padding: 0 8px;
+  }
 }
