update event search result tiles

--- a/views/partials/event-tile.hbs
+++ b/views/partials/event-tile.hbs
@@ -1,5 +1,12 @@
+<script>const eventId = `{{this._id}}`</script>
+<script src='/javascripts/event-search.js'></script>
+
 <div class="tile">
-  <a href="/events/{{ this._id}}">
-    {{ this.title}}<span> - {{ this.description }}</span>
-  </a>
+  <div class="tile-image">
+    <img src={{this.picture}} alt="event picture">
+  </div>
+  <div class="tile-content">
+    <h3>{{ this.title}}</h3>
+    <p>{{ this.description }}</p>
+  </div>
 </div>
