--- a/public/stylesheets/search.scss
+++ b/public/stylesheets/search.scss
@@ -29,7 +29,8 @@ $filter-width: 320px;
     justify-content: center;
     align-items: center;
     img {
-      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
   .tile-content {
