--- a/views/tandems/find.hbs
+++ b/views/tandems/find.hbs
@@ -1,6 +1,6 @@
 {{> navbar user}}
 <h3>Find Tandems</h3>
-<div class="vert-container">
+<div class="search-container">
     <div class="filter-container">
         Filter options
     </div>
