--- a/public/stylesheets/profile.scss
+++ b/public/stylesheets/profile.scss
@@ -7,7 +7,7 @@ $upper-part-height: 250px;
   display: flex;
   flex-direction: column;
 
-  @media (min-width: 660px) {
+  @media #{$screen-middle-large} {
     flex-direction: row;
   }
   justify-content: center;
