--- a/public/stylesheets/search.scss
+++ b/public/stylesheets/search.scss
@@ -1,29 +1,51 @@
 $filter-width: 320px;
+$tile-picture-large: 120px;
+$tile-picture-small: 80px;
 
-.filter-container {
-  width: $filter-width;
-  height: calc(100vh - #{$navbar-height} - 160px);
-  padding: 0 0 0 8px;
-  border-right: 1px solid black;
-}
+.search-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  @media #{$screen-middle-large} {
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  .filter-container {
+    width: $filter-width;
+    height: calc(100vh - #{$navbar-height} - 160px);
+    padding: 0 0 0 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media #{$screen-middle-large} {
+      border-right: 1px solid black;
+    }
+  }
 
-.results-container {
-  padding: 0 0 0 8px;
+  .results-container {
+    padding: 0 0 0 8px;
+  }
 }
 
 .tile {
   border: 1px solid #e6e6e6;
-  width: calc(
-    100vw - #{$filter-width} - 8px - 8px
-  ); //tile width: full width - filter space - container padding -tile padding
+  @media #{$screen-middle-large} {
+    width: calc(
+      100vw - #{$filter-width} - 8px - 8px
+    ); //tile width: full width - filter space - container padding -tile padding
+  }
   height: 120px;
   padding: 0 4px;
   margin: 2px 0;
   display: flex;
   align-items: center;
   .tile-image {
-    height: 120px;
-    width: 120px;
+    height: $tile-picture-small;
+    width: $tile-picture-small;
+    @media #{$screen-middle-large} {
+      height: $tile-picture-large;
+      width: $tile-picture-large;
+    }
     border: 1px solid #e6e6e6;
     display: flex;
     justify-content: center;
@@ -35,5 +57,9 @@ $filter-width: 320px;
   }
   .tile-content {
     padding: 0 8px;
+    width: calc(100% - $tile-picture-small);
+    @media #{$screen-middle-large} {
+      width: calc(100% - $tile-picture-large);
+    }
   }
 }
