--- a/views/events/find.hbs
+++ b/views/events/find.hbs
@@ -2,7 +2,7 @@
 <h3>Find Events</h3>
 
 <a href="/events/new">Create own event</a>
-<div class="vert-container">
+<div class="search-container">
     <div class="filter-container">
         Filter options
     </div>
