fixed error that was throws on signup page

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,3 +1,4 @@
+<script>const user = null</script>
 <script src='/javascripts/data.js'></script>
 <script src='/javascripts/user-info.js'></script>
 
