scaling of pictures every where on the website so they fit in their frames

--- a/public/stylesheets/profile.scss
+++ b/public/stylesheets/profile.scss
@@ -33,8 +33,14 @@ $upper-part-height: 250px;
 
 #profile-pic-large {
   height: $upper-part-height;
-  width: 240px;
-
+  width: $upper-part-height;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
   margin: 20px 0;
 }
 
