--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -16,8 +16,8 @@
       <input type="number" name="age" placeholder="Age" value="" required>
       <label for="description">About me:</label>
       <textarea rows="4" type="text" name="description" placeholder="Something about me.."></textarea>
-      <label for="password">Password</label>
-      <input id="password" type="password" name="password" placeholder="Your password">
+      <label for="password">Password:</label>
+      <input id="password" type="password" name="password" placeholder="Your password" required>
       <label for="picture">Profile Picture</label>
       <input type="file" name="picture">
     </div>
@@ -38,7 +38,7 @@
       <h3>My Location</h3>
       <label for="country">Country</label>
       <select class="ui search selection dropdown" name="country" id="user-country">
-        <option value="">Country</option>
+        <option value="">Country:</option>
       </select>
       <label for="city">City:</label>
       <input type="text" name="city" placeholder="City" value="">
