--- a/views/partials/event-tile.hbs
+++ b/views/partials/event-tile.hbs
@@ -1,4 +1,4 @@
-<script>const eventId = `{{this._id}}`</script>
+<script>eventId = `{{this._id}}`</script>
 <script src='/javascripts/event-search.js'></script>
 
 <div class="tile">
