--- a/views/profile/show.hbs
+++ b/views/profile/show.hbs
@@ -5,7 +5,9 @@
 <div class="content-wrapper">
   <div id="content-wrapper-profile">
     <div class="column">
-      <img id="profile-pic-large" src="{{user.picture}}">
+      <div id="profile-pic-large">
+        <img src="{{user.picture}}">
+      </div>
       <section id="location">
         <hr>
 
