--- a/public/stylesheets/navigation.scss
+++ b/public/stylesheets/navigation.scss
@@ -45,8 +45,16 @@ nav {
   a:hover {
     color: black;
   }
-  img {
+  .nav-img {
     height: $navbar-height;
+    width: $navbar-height;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
 
   @media #{$screen-middle} {
