--- a/views/events/find.hbs
+++ b/views/events/find.hbs
@@ -1,4 +1,4 @@
-{{> navbar user}}
+<script>let eventId = null</script> {{> navbar user}}
 <h3>Find Events</h3>
 
 <a href="/events/new">Create own event</a>
