--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,6 +1,8 @@
 <nav>
   <div class="nav-group left">
-    <img id="logo" src="/images/temp-logo.png" alt="logo">
+    <div class="nav-img">
+      <img id="logo" src="/images/temp-logo.png" alt="logo">
+    </div>
     <div class="nav-route-links">
       <a href="/events/find">Find Events</a>
       <a href="/tandems/find">Find Tandems</a>
@@ -11,7 +13,9 @@
       <p id="nav-user-name">{{this.name}}</p>
     </div>
     <div class="ui dropdown">
-      <img id="nav-avatar" src="{{this.picture}}" alt="profile">
+      <div class="nav-img">
+        <img id="nav-avatar" src="{{this.picture}}" alt="profile">
+      </div>
       <div class="menu">
         <div class="item" data-value="profile">My profile</div>
         <div class="item" data-value="logout">Log out</div>
