--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,67 +5,51 @@ nav {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
-nav .nav-group {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-nav .nav-group .nav-route-links {
-  margin-left: 0px;
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-}
-nav .nav-group #nav-user-name {
-  display: none;
-}
-nav .nav-group .dropdown {
-  height: 44px;
-}
-nav .nav-group .dropdown .menu {
-  right: 0;
-  left: auto;
-}
-nav .left {
-  padding: 0 0 0 20px;
-}
-nav .right {
-  padding-right: 16px;
-}
-nav a,
-nav p {
-  color: white;
-  padding: 12px;
-  text-decoration: none;
-}
-nav a:hover {
-  color: black;
-}
-nav .nav-img {
-  height: 44px;
-  width: 44px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-nav .nav-img img {
-  max-width: 100%;
-  max-height: 100%;
-}
-@media (min-width : 480px) {
-  nav .nav-group .nav-route-links {
-    padding-left: 20px;
+  align-items: center; }
+  nav .nav-group {
+    display: flex;
     justify-content: flex-start;
-  }
-  nav .nav-group #nav-user-name {
-    display: inline;
-  }
-  nav a {
-    padding: 0 20px;
-  }
-}
+    align-items: center; }
+    nav .nav-group .nav-route-links {
+      margin-left: 0px;
+      display: flex;
+      justify-content: space-around;
+      text-align: center; }
+    nav .nav-group #nav-user-name {
+      display: none; }
+    nav .nav-group .dropdown {
+      height: 44px; }
+      nav .nav-group .dropdown .menu {
+        right: 0;
+        left: auto; }
+  nav .left {
+    padding: 0 0 0 20px; }
+  nav .right {
+    padding-right: 16px; }
+  nav a,
+  nav p {
+    color: white;
+    padding: 12px;
+    text-decoration: none; }
+  nav a:hover {
+    color: black; }
+  nav .nav-img {
+    height: 44px;
+    width: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    nav .nav-img img {
+      max-width: 100%;
+      max-height: 100%; }
+  @media (min-width: 480px) {
+    nav .nav-group .nav-route-links {
+      padding-left: 20px;
+      justify-content: flex-start; }
+    nav .nav-group #nav-user-name {
+      display: inline; }
+    nav a {
+      padding: 0 20px; } }
 
 #content-wrapper-profile {
   margin-top: 30px;
@@ -73,31 +57,23 @@ nav .nav-img img {
   width: 80vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-}
-@media (min-width : 660px) {
-  #content-wrapper-profile {
-    flex-direction: row;
-  }
-}
-#content-wrapper-profile .column {
-  display: flex;
-  flex-direction: column;
-  margin: 0 2vw;
-}
-@media (min-width : 1024px) {
+  justify-content: center; }
+  @media (min-width: 660px) {
+    #content-wrapper-profile {
+      flex-direction: row; } }
   #content-wrapper-profile .column {
-    margin: 0 10vw;
-  }
-}
-#content-wrapper-profile .column #basic-info {
-  height: 250px;
-  margin: 20px 0;
-}
-#content-wrapper-profile .row {
-  display: flex;
-  flex-direction: row;
-}
+    display: flex;
+    flex-direction: column;
+    margin: 0 2vw; }
+    @media (min-width: 1024px) {
+      #content-wrapper-profile .column {
+        margin: 0 10vw; } }
+    #content-wrapper-profile .column #basic-info {
+      height: 250px;
+      margin: 20px 0; }
+  #content-wrapper-profile .row {
+    display: flex;
+    flex-direction: row; }
 
 #profile-pic-large {
   height: 250px;
@@ -105,40 +81,32 @@ nav .nav-img img {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px 0;
-}
-#profile-pic-large img {
-  max-width: 100%;
-  max-height: 100%;
-}
+  margin: 20px 0; }
+  #profile-pic-large img {
+    max-width: 100%;
+    max-height: 100%; }
 
 .lang-list {
   margin: 0 0 0 14px;
-  list-style: none;
-}
+  list-style: none; }
 
 .info-category {
   font-weight: 800;
-  width: 140px;
-}
-@media (min-width : 1024px) {
-  .info-category {
-    width: 180px;
-  }
-}
+  width: 140px; }
+  @media (min-width: 1024px) {
+    .info-category {
+      width: 180px; } }
 
 #user-profile-name {
   font-size: 2.4rem;
-  margin: 0 0 20px 0;
-}
+  margin: 0 0 20px 0; }
 
 .background-wrapper img {
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
   width: 100vw;
-  height: 100vh;
-}
+  height: 100vh; }
 
 .dashboard-wrapper {
   margin-top: 44px;
@@ -147,36 +115,28 @@ nav .nav-img img {
   align-items: center;
   position: absolute;
   top: 20%;
-  right: 0;
-}
+  right: 0; }
 
 .search-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-}
-@media (min-width : 660px) {
-  .search-container {
-    flex-direction: row;
-    justify-content: flex-start;
-  }
-}
-.search-container .filter-container {
-  width: 320px;
-  height: calc(100vh - 44px - 160px);
-  padding: 0 0 0 8px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-@media (min-width : 660px) {
+  justify-content: flex-start; }
+  @media (min-width: 660px) {
+    .search-container {
+      flex-direction: row;
+      justify-content: flex-start; } }
   .search-container .filter-container {
-    border-right: 1px solid black;
-  }
-}
-.search-container .results-container {
-  padding: 0 0 0 8px;
-}
+    width: 320px;
+    height: calc(100vh - 44px - 160px);
+    padding: 0 0 0 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    @media (min-width: 660px) {
+      .search-container .filter-container {
+        border-right: 1px solid black; } }
+  .search-container .results-container {
+    padding: 0 0 0 8px; }
 
 .tile {
   border: 1px solid #e6e6e6;
@@ -184,86 +144,67 @@ nav .nav-img img {
   padding: 0 4px;
   margin: 2px 0;
   display: flex;
-  align-items: center;
-}
-@media (min-width : 660px) {
-  .tile {
-    width: calc( 100vw - 320px - 8px - 8px );
-  }
-}
-.tile .tile-image {
-  height: 80px;
-  width: 80px;
-  border: 1px solid #e6e6e6;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-@media (min-width : 660px) {
+  align-items: center; }
+  @media (min-width: 660px) {
+    .tile {
+      width: calc( 100vw - 320px - 8px - 8px); } }
   .tile .tile-image {
-    height: 120px;
-    width: 120px;
-  }
-}
-.tile .tile-image img {
-  max-width: 100%;
-  max-height: 100%;
-}
-.tile .tile-content {
-  padding: 0 8px;
-  width: calc(100% - $tile-picture-small);
-}
-@media (min-width : 660px) {
+    height: 80px;
+    width: 80px;
+    border: 1px solid #e6e6e6;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    @media (min-width: 660px) {
+      .tile .tile-image {
+        height: 120px;
+        width: 120px; } }
+    .tile .tile-image img {
+      max-width: 100%;
+      max-height: 100%; }
   .tile .tile-content {
-    width: calc(100% - $tile-picture-large);
-  }
-}
+    padding: 0 8px;
+    width: calc(100% - $tile-picture-small); }
+    @media (min-width: 660px) {
+      .tile .tile-content {
+        width: calc(100% - $tile-picture-large); } }
 
 * {
   margin: 0;
   padding: 0;
-  color: black;
-}
+  color: black; }
 
 body {
   font-size: 14px;
-  font-family: "Telex", sans-serif;
-}
+  font-family: "Telex", sans-serif; }
 
 a {
-  color: #5533ff;
-}
+  color: #5533ff; }
 
 textarea {
   padding-left: 4px;
-  resize: none;
-}
+  resize: none; }
 
 form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
-form .form-group {
-  display: flex;
-  flex-direction: column;
-  width: 280px;
-}
-form .form-group input,
-form .form-group textarea {
-  padding: 5px 4px;
-  border-radius: 4px;
-}
-form .form-group label {
-  margin-top: 10px;
-}
+  align-items: center; }
+  form .form-group {
+    display: flex;
+    flex-direction: column;
+    width: 280px; }
+    form .form-group input,
+    form .form-group textarea {
+      padding: 5px 4px;
+      border-radius: 4px; }
+    form .form-group label {
+      margin-top: 10px; }
 
 .content-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 0 20px 0;
-}
+  margin: 0 0 20px 0; }
 
 .success-btn {
   background-color: #20a2ff;
@@ -272,13 +213,11 @@ form .form-group label {
   padding: 8px 0;
   border-radius: 4px;
   font-size: 1.1rem;
-  text-align: center;
-}
+  text-align: center; }
 
 .success-btn:hover {
   color: #ffffff;
-  background-color: #258cd6;
-}
+  background-color: #258cd6; }
 
 .danger-btn {
   background-color: #bb1111;
@@ -287,12 +226,10 @@ form .form-group label {
   padding: 8px 0;
   border-radius: 4px;
   font-size: 1.1rem;
-  text-align: center;
-}
+  text-align: center; }
 
 .danger-btn:hover {
   color: #ffffff;
-  background-color: #970f0f;
-}
+  background-color: #970f0f; }
 
 /*# sourceMappingURL=style.css.map */
