fixed link to delete profile

--- a/views/profile/show.hbs
+++ b/views/profile/show.hbs
@@ -71,5 +71,5 @@
   </br>
   {{#if user.ownProfile}}
   <a href="/profile/edit" class="success-btn">Edit</a><br>
-  <a href="/delete/" class="danger-btn">Delete Account</a><br> {{/if}}
+  <a href="/profile/delete/" class="danger-btn">Delete Account</a><br> {{/if}}
 </div>
