signup fields fix

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -25,11 +25,11 @@
     <div class="form-group">
       <h3>My Languages</h3>
       <label>Languages I know:</label>
-      <select name="known-languages" class="search selection" multiple="" id="multi-select-known">
+      <select name="knownLanguages" class="search selection" multiple="" id="multi-select-known">
         <option value="">Select a language</option>
       </select>
       <label>Languages I am learning:</label>
-      <select name="learning-languages" class="search selection" multiple="" id="multi-select-learning">
+      <select name="learningLanguages" class="search selection" multiple="" id="multi-select-learning">
         <option value="">Select a language</option>
       </select>
     </div>
