--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,51 +5,67 @@ nav {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
-  nav .nav-group {
-    display: flex;
+  align-items: center;
+}
+nav .nav-group {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+nav .nav-group .nav-route-links {
+  margin-left: 0px;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+nav .nav-group #nav-user-name {
+  display: none;
+}
+nav .nav-group .dropdown {
+  height: 44px;
+}
+nav .nav-group .dropdown .menu {
+  right: 0;
+  left: auto;
+}
+nav .left {
+  padding: 0 0 0 20px;
+}
+nav .right {
+  padding-right: 16px;
+}
+nav a,
+nav p {
+  color: white;
+  padding: 12px;
+  text-decoration: none;
+}
+nav a:hover {
+  color: black;
+}
+nav .nav-img {
+  height: 44px;
+  width: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+nav .nav-img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+@media (min-width : 480px) {
+  nav .nav-group .nav-route-links {
+    padding-left: 20px;
     justify-content: flex-start;
-    align-items: center; }
-    nav .nav-group .nav-route-links {
-      margin-left: 0px;
-      display: flex;
-      justify-content: space-around;
-      text-align: center; }
-    nav .nav-group #nav-user-name {
-      display: none; }
-    nav .nav-group .dropdown {
-      height: 44px; }
-      nav .nav-group .dropdown .menu {
-        right: 0;
-        left: auto; }
-  nav .left {
-    padding: 0 0 0 20px; }
-  nav .right {
-    padding-right: 16px; }
-  nav a,
-  nav p {
-    color: white;
-    padding: 12px;
-    text-decoration: none; }
-  nav a:hover {
-    color: black; }
-  nav .nav-img {
-    height: 44px;
-    width: 44px;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    nav .nav-img img {
-      max-width: 100%;
-      max-height: 100%; }
-  @media (min-width: 480px) {
-    nav .nav-group .nav-route-links {
-      padding-left: 20px;
-      justify-content: flex-start; }
-    nav .nav-group #nav-user-name {
-      display: inline; }
-    nav a {
-      padding: 0 20px; } }
+  }
+  nav .nav-group #nav-user-name {
+    display: inline;
+  }
+  nav a {
+    padding: 0 20px;
+  }
+}
 
 #content-wrapper-profile {
   margin-top: 30px;
@@ -57,23 +73,31 @@ nav {
   width: 80vw;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
-  @media (min-width: 660px) {
-    #content-wrapper-profile {
-      flex-direction: row; } }
+  justify-content: center;
+}
+@media (min-width : 660px) {
+  #content-wrapper-profile {
+    flex-direction: row;
+  }
+}
+#content-wrapper-profile .column {
+  display: flex;
+  flex-direction: column;
+  margin: 0 2vw;
+}
+@media (min-width : 1024px) {
   #content-wrapper-profile .column {
-    display: flex;
-    flex-direction: column;
-    margin: 0 2vw; }
-    @media (min-width: 1024px) {
-      #content-wrapper-profile .column {
-        margin: 0 10vw; } }
-    #content-wrapper-profile .column #basic-info {
-      height: 250px;
-      margin: 20px 0; }
-  #content-wrapper-profile .row {
-    display: flex;
-    flex-direction: row; }
+    margin: 0 10vw;
+  }
+}
+#content-wrapper-profile .column #basic-info {
+  height: 250px;
+  margin: 20px 0;
+}
+#content-wrapper-profile .row {
+  display: flex;
+  flex-direction: row;
+}
 
 #profile-pic-large {
   height: 250px;
@@ -81,130 +105,221 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px 0; }
-  #profile-pic-large img {
-    max-width: 100%;
-    max-height: 100%; }
+  margin: 20px 0;
+}
+#profile-pic-large img {
+  max-width: 100%;
+  max-height: 100%;
+}
 
 .lang-list {
   margin: 0 0 0 14px;
-  list-style: none; }
+  list-style: none;
+}
 
 .info-category {
   font-weight: 800;
-  width: 140px; }
-  @media (min-width: 1024px) {
-    .info-category {
-      width: 180px; } }
+  width: 140px;
+}
+@media (min-width : 1024px) {
+  .info-category {
+    width: 180px;
+  }
+}
 
 #user-profile-name {
   font-size: 2.4rem;
-  margin: 0 0 20px 0; }
+  margin: 0 0 20px 0;
+}
 
 .background-wrapper img {
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
   width: 100vw;
-  height: 100vh; }
+  height: 100vh;
+}
 
-.dashboard-wrapper {
+.dashboard-content-wrapper {
   margin-top: 44px;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  top: 20%;
-  right: 0; }
+}
+@media (min-width : 480px) {
+  .dashboard-content-wrapper {
+    align-items: flex-end;
+  }
+}
+.dashboard-content-wrapper .dashboard-group {
+  width: 340px;
+  margin: 40px 0 40px 0;
+  padding: 4px;
+  background: rgba(243, 243, 243, 0.2);
+  border-radius: 4px;
+}
+@media (min-width : 480px) {
+  .dashboard-content-wrapper .dashboard-group {
+    margin-right: 60px;
+  }
+}
+@media (min-width : 1024px) {
+  .dashboard-content-wrapper .dashboard-group {
+    margin-right: 100px;
+  }
+}
+.dashboard-content-wrapper .dashboard-group h3 {
+  font-size: 1.8rem;
+}
+.dashboard-content-wrapper .dashboard-group a,
+.dashboard-content-wrapper .dashboard-group p {
+  font-size: 1.1rem;
+}
+
+.tile-dashboard {
+  border: 1px solid #e6e6e6;
+  height: 80px;
+  padding: 0 4px;
+  margin: 2px 0;
+  display: flex;
+  align-items: center;
+}
+.tile-dashboard .tile-image {
+  height: 80px;
+  width: 80px;
+  border: 1px solid #e6e6e6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tile-dashboard .tile-image img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.tile-dashboard .tile-content {
+  padding: 0 8px;
+  width: calc(100% - $tile-picture-s);
+}
+.tile-dashboard .tile-content .message-time {
+  font-size: 0.8rem;
+  color: gray;
+}
 
 .search-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; }
-  @media (min-width: 660px) {
-    .search-container {
-      flex-direction: row;
-      justify-content: flex-start; } }
+  justify-content: flex-start;
+}
+@media (min-width : 660px) {
+  .search-container {
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+}
+.search-container .filter-container {
+  width: 320px;
+  height: calc(100vh - 44px - 160px);
+  padding: 0 0 0 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (min-width : 660px) {
   .search-container .filter-container {
-    width: 320px;
-    height: calc(100vh - 44px - 160px);
-    padding: 0 0 0 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-    @media (min-width: 660px) {
-      .search-container .filter-container {
-        border-right: 1px solid black; } }
-  .search-container .results-container {
-    padding: 0 0 0 8px; }
+    border-right: 1px solid black;
+  }
+}
+.search-container .results-container {
+  padding: 0 0 0 8px;
+}
 
-.tile {
+.tile-search {
   border: 1px solid #e6e6e6;
   height: 120px;
   padding: 0 4px;
   margin: 2px 0;
   display: flex;
-  align-items: center; }
-  @media (min-width: 660px) {
-    .tile {
-      width: calc( 100vw - 320px - 8px - 8px); } }
-  .tile .tile-image {
-    height: 80px;
-    width: 80px;
-    border: 1px solid #e6e6e6;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    @media (min-width: 660px) {
-      .tile .tile-image {
-        height: 120px;
-        width: 120px; } }
-    .tile .tile-image img {
-      max-width: 100%;
-      max-height: 100%; }
-  .tile .tile-content {
-    padding: 0 8px;
-    width: calc(100% - $tile-picture-small); }
-    @media (min-width: 660px) {
-      .tile .tile-content {
-        width: calc(100% - $tile-picture-large); } }
+  align-items: center;
+}
+@media (min-width : 660px) {
+  .tile-search {
+    width: calc( 100vw - 320px - 8px - 8px );
+  }
+}
+.tile-search .tile-image {
+  height: 80px;
+  width: 80px;
+  border: 1px solid #e6e6e6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (min-width : 660px) {
+  .tile-search .tile-image {
+    height: 120px;
+    width: 120px;
+  }
+}
+.tile-search .tile-image img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.tile-search .tile-content {
+  padding: 0 8px;
+  width: calc(100% - $tile-picture-s);
+}
+@media (min-width : 660px) {
+  .tile-search .tile-content {
+    width: calc(100% - $tile-picture-l);
+  }
+}
 
 * {
   margin: 0;
   padding: 0;
-  color: black; }
+  color: black;
+}
 
 body {
   font-size: 14px;
-  font-family: "Telex", sans-serif; }
+  font-family: "Telex", sans-serif;
+}
 
 a {
-  color: #5533ff; }
+  color: #5533ff;
+}
 
 textarea {
   padding-left: 4px;
-  resize: none; }
+  resize: none;
+}
 
 form {
   display: flex;
   flex-direction: column;
-  align-items: center; }
-  form .form-group {
-    display: flex;
-    flex-direction: column;
-    width: 280px; }
-    form .form-group input,
-    form .form-group textarea {
-      padding: 5px 4px;
-      border-radius: 4px; }
-    form .form-group label {
-      margin-top: 10px; }
+  align-items: center;
+}
+form .form-group {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+}
+form .form-group input,
+form .form-group textarea {
+  padding: 5px 4px;
+  border-radius: 4px;
+}
+form .form-group label {
+  margin-top: 10px;
+}
 
 .content-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 0 20px 0; }
+  margin: 0 0 20px 0;
+}
 
 .success-btn {
   background-color: #20a2ff;
@@ -213,11 +328,13 @@ form {
   padding: 8px 0;
   border-radius: 4px;
   font-size: 1.1rem;
-  text-align: center; }
+  text-align: center;
+}
 
 .success-btn:hover {
   color: #ffffff;
-  background-color: #258cd6; }
+  background-color: #258cd6;
+}
 
 .danger-btn {
   background-color: #bb1111;
@@ -226,10 +343,12 @@ form {
   padding: 8px 0;
   border-radius: 4px;
   font-size: 1.1rem;
-  text-align: center; }
+  text-align: center;
+}
 
 .danger-btn:hover {
   color: #ffffff;
-  background-color: #970f0f; }
+  background-color: #970f0f;
+}
 
 /*# sourceMappingURL=style.css.map */
