--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -8,6 +8,9 @@ $screen-large: "(min-width : 1024px)";
 $btn-text-a: #aaaaaa;
 $btn-text-b: #ffffff;
 $navbar-height: 44px;
+$tile-picture-l: 120px;
+$tile-picture-s: 80px;
+$tile-picture-xs: 60px;
 
 @import "./navigation";
 @import "./profile";
