solved error thrown on the tandem search page. Small css improvements to Dashboard

--- a/views/partials/tandem-tile.hbs
+++ b/views/partials/tandem-tile.hbs
@@ -1,4 +1,4 @@
-<script>const tandemId = `{{this._id}}`</script>
+<script>tandemId = `{{this._id}}`</script>
 <script src='/javascripts/tandem-search.js'></script>
 
 <div class="tile-search">
