--- a/views/tandems/find.hbs
+++ b/views/tandems/find.hbs
@@ -1,4 +1,4 @@
-{{> navbar user}}
+<script>let tandemId = null</script> {{> navbar user}}
 <h3>Find Tandems</h3>
 <div class="search-container">
     <div class="filter-container">
